# gsrs.model

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fix_element_property.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: substance.hyper-schema.json
gsrs/: __init__.py
gsrs/model/: __init__.py  _serialization.py  agent_modification.py  amount.py  chemical_substance.py  code.py  component.py  disulfide_link.py  ginas_chemical_structure.py  ginas_common_data.py  ginas_common_sub_data.py  glycosylation.py  linkage.py  material.py  mixture.py  mixture_substance.py  modifications.py  moiety.py  name.py  name_org.py  note.py  nucleic_acid.py  nucleic_acid_substance.py  other_link.py  parameter.py  physical_modification.py  physical_parameter.py  polymer.py  polymer_classification.py  polymer_substance.py  product.py  property.py  protein.py  protein_substance.py  reference.py  relationship.py  site.py  site_container.py  specified_substance_component.py  specified_substance_g1.py  (+12 more)
gsrs/utils/: __init__.py  substance_chunker.py
tests/: test_embedding_chunks.py  test_imports.py  test_json_serialization.py  test_product_model.py  test_substance_dispatch.py
