[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gsrs-model"
version = "0.1.1"
description = "Pydantic v2 models for the GSRS schema and live GSRS substance payloads."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Egor Puzanov", email = "epuzanov@users.noreply.github.com" },
]
keywords = ["gsrs", "pydantic", "schema", "substance", "fhir"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gsrs", "gsrs.*"]
